# jsonld-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  ex01b.jsonld  jsonld2rdf.cpp
include/: json.hpp.asc  (+4 more)
jsonld-cpp/: BlankNode.cpp  BlankNode.h  BlankNodeNames.cpp  BlankNodeNames.h  CMakeLists.txt  CanonicalizationProcessor.cpp  CanonicalizationProcessor.h  Context.cpp  Context.h  ContextProcessor.cpp  ContextProcessor.h  DocumentLoader.cpp  DocumentLoader.h  DoubleFormatter.cpp  DoubleFormatter.h  ExpansionProcessor.cpp  ExpansionProcessor.h  FileLoader.cpp  FileLoader.h  JSONDocument.cpp  JSONDocument.h  JsonLdApi.cpp  JsonLdApi.h  JsonLdConsts.h  JsonLdError.cpp  JsonLdError.h  JsonLdOptions.cpp  JsonLdOptions.h  JsonLdProcessor.cpp  JsonLdProcessor.h  JsonLdUrl.cpp  JsonLdUrl.h  JsonLdUtils.cpp  JsonLdUtils.h  MediaType.cpp  MediaType.h  NQuadsSerialization.cpp  NQuadsSerialization.h  NormalizeUtils.cpp  NormalizeUtils.h  (+40 more)
jsonld-cpp/cmake/: jsonld-cppConfig.cmake.in
jsonld-cpp/detail/: Context.cpp  Context.h  ContextProcessor.cpp  ContextProcessor.h  DoubleFormatter.cpp  ExpansionProcessor.cpp  ExpansionProcessor.h  JsonLdUtils.cpp  JsonLdUtils.h  RDFRegex.cpp  RDFRegex.h  RDFSerializationProcessor.cpp  RDFSerializationProcessor.h  Uri.cpp  UriParser.cpp  UriParser.h  WellFormed.cpp
jsonld-cpp/test/: CMakeLists.txt
jsonld-cpp/test/implementation-report/: CMakeLists.txt  CommandRunner.cpp  ConfigReader.cpp  ConfigReader.h  EarlFormatter.cpp  EarlFormatter.h  RdfData.h  RdfDataBuilder.cpp  RdfDataBuilder.h  ReportWriter.h  TestResult.h  TestRunner.cpp  TestRunner.h  configuration.html  configuration.js  main.cpp
jsonld-cpp/test/testjsonld-cpp/: CMakeLists.txt  ManifestLoader.cpp  ManifestLoader.h  RDFDatasetComparison.cpp  RDFDatasetComparison.h  TestCase.cpp  TestCase.h  TestCaseOptions.cpp  TestCaseOptions.h  UrdnaManifestLoader.cpp  UrdnaManifestLoader.h  UriBaseRewriter.cpp  UriBaseRewriter.h  main.cpp  test_BlankNodeNames.cpp  test_DoubleFormatter.cpp  test_FileLoader.cpp  test_JsonLdApi.cpp  test_JsonLdProcessor_canonicalize-rdfc10.cpp  test_JsonLdProcessor_expand.cpp  test_JsonLdProcessor_normalize-rdfc10.cpp  test_JsonLdProcessor_normalize-urdna2015.cpp  test_JsonLdProcessor_toRDF.cpp  test_JsonLdUrl.cpp  test_JsonLdUtils.cpp  test_NQuadsParser.cpp  test_NQuadsSerialization.cpp  test_NodeComparisons.cpp  test_NormalizeUtils.cpp  test_ObjectComparisons.cpp  test_Permutator.cpp  test_RDFDataset.cpp  test_RDFDatasetComparison.cpp  test_RDFDatasetUtils.cpp  test_RDFQuad.cpp  test_RDFTriple.cpp  test_Regex.cpp  test_Sha1.cpp  test_Sha256.cpp  test_Sha384.cpp  (+3 more)
jsonld-cpp/test/testjsonld-cpp/test_data/: duplicate_quads.nq  expand-manifest-extra.jsonld  normalize-manifest-urdna2015.jsonld  pi-is-four.json  toRdf-manifest-extra.jsonld  toRdf-manifest.jsonld
libjsonld-cpp/: BlankNode.cpp  BlankNode.h  BlankNodeIdentifierGenerator.cpp  BlankNodeIdentifierGenerator.h  CMakeLists.txt  Context.cpp  Context.h  DocumentLoader.cpp  DocumentLoader.h  DoubleFormatter.cpp  DoubleFormatter.h  FileLoader.cpp  FileLoader.h  IriUtils.cpp  IriUtils.h  JSONDocument.cpp  JSONDocument.h  JsonLdApi.cpp  JsonLdApi.h  JsonLdConsts.h  JsonLdError.cpp  JsonLdError.h  JsonLdOptions.cpp  JsonLdOptions.h  JsonLdProcessor.cpp  JsonLdProcessor.h  JsonLdUrl.cpp  JsonLdUrl.h  JsonLdUtils.cpp  JsonLdUtils.h  MediaType.cpp  NormalizeUtils.cpp  NormalizeUtils.h  ObjUtils.cpp  ObjUtils.h  Permutator.cpp  Permutator.h  RDFDataset.cpp  RDFDataset.h  RDFDatasetUtils.cpp  (+17 more)
test/implementation-report/: CMakeLists.txt  CommandRunner.cpp  CommandRunner.h  Config.h  ConfigReader.cpp  ConfigReader.h  EarlFormatter.cpp  EarlFormatter.h  FolderScanner.cpp  FolderScanner.h  RdfData.cpp  RdfData.h  RdfDataBuilder.cpp  RdfDataBuilder.h  ReportWriter.cpp  ReportWriter.h  TestResult.h  TestRunner.cpp  TestRunner.h  configuration.css  configuration.html  configuration.js  main.cpp  report-config.jsonld
test/implementation-report/doc/: doxygen.conf
test/implementation-report/doc/html/: CommandRunner_8h_source.html  ConfigReader_8h_source.html  EarlFormatter_8h.html  EarlFormatter_8h_source.html  RdfDataBuilder_8h_source.html  RdfData_8h_source.html  ReportWriter_8h_source.html  TestRunner_8h_source.html  annotated.html  classCommandRunner-members.html  classCommandRunner.html  classConfigReader-members.html  classConfigReader.html  classEarlFormatter-members.html  classEarlFormatter.html  classRdfData-members.html  classRdfData.html  classRdfDataBuilder-members.html  classRdfDataBuilder.html  classRdfNamespace-members.html  classRdfNamespace.html  classRdfObject-members.html  classRdfObject.html  classReportWriter-members.html  classReportWriter.html  classTestRunner-members.html  classTestRunner.html  functions.html  functions_func.html  functions_vars.html  globals.html  index.html  main_8cpp.html  structTestResult-members.html
test/testjsonld-cpp/: CMakeLists.txt  ManifestLoader.cpp  ManifestLoader.h  TestCase.cpp  TestCase.h  TestCaseOptions.cpp  TestCaseOptions.h  UrdnaManifestLoader.cpp  UrdnaManifestLoader.h  UriBaseRewriter.cpp  UriBaseRewriter.h  main.cpp  testHelpers.cpp  testHelpers.h  test_BlankNodeIdentifierGenerator.cpp  test_DocumentLoader.cpp  test_DoubleFormatter.cpp  test_FileLoader.cpp  test_IriUtils.cpp  test_JsonLdApi.cpp  test_JsonLdProcessor.cpp  test_JsonLdProcessor_expand.cpp  test_JsonLdProcessor_normalize-urdna2015.cpp  test_JsonLdProcessor_normalize.cpp  test_JsonLdProcessor_toRDF.cpp  test_JsonLdUtils.cpp  test_NodeComparisons.cpp  test_NormalizeUtils.cpp  test_ObjectComparisons.cpp  test_Permutator.cpp  test_RDFDataset.cpp  test_RDFDatasetUtils.cpp  test_Regex.cpp  test_Sha1.cpp  test_Sha256.cpp  test_UniqueIdentifierGenerator.cpp  test_UniqueNamer.cpp  test_Uri.cpp  test_UriParser.cpp
test/testjsonld-cpp/test_data/: expand-0301-out.jsonld  expand-0302-out.jsonld  expand-manifest.jsonld  normalize-manifest.jsonld  toRdf-0302-out.nq  toRdf-manifest-extra.jsonld  toRdf-manifest.jsonld
test/testjsonld-cpp/test_data/expand/: 0302-out.jsonld
(+102 files in other folders)
