#
# Implementation Report
#
add_executable(
    implementation-report
    main.cpp
    CommandRunner.h
    CommandRunner.cpp
    FolderScanner.h
    FolderScanner.cpp
    TestRunner.h
    TestRunner.cpp
    ReportWriter.h
    ReportWriter.cpp
    EarlFormatter.h
    EarlFormatter.cpp
    ConfigReader.h
    ConfigReader.cpp
    RdfData.h
)
target_compile_features(
    implementation-report
    PRIVATE
    cxx_std_11
)
target_compile_options(
    implementation-report
    PRIVATE
    ${DCD_CXX_FLAGS}
)
set_target_properties(
    implementation-report
    PROPERTIES
    CXX_EXTENSIONS OFF
)
target_include_directories(
    implementation-report
    PUBLIC
        "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../../include>"
)
