#
# Implementation Report
#
add_executable(
    implementation-report
    main.cpp
    CommandRunner.h
    CommandRunner.cpp
    TestRunner.h
    TestRunner.cpp
    ReportWriter.h
    ReportWriter.cpp
    EarlFormatter.h
    EarlFormatter.cpp
    ConfigReader.h
    ConfigReader.cpp
    RdfData.h
    RdfData.cpp
    RdfDataBuilder.h
    RdfDataBuilder.cpp
    TestResult.h
)
target_compile_features(
    implementation-report
    PRIVATE
    cxx_std_11
)
set_target_properties(
    implementation-report
    PROPERTIES
    CXX_EXTENSIONS OFF
)
target_include_directories(
    implementation-report
    PUBLIC
        "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../../include>"
)
target_link_libraries(
        implementation-report
        jsonld-cpp::jsonld-cpp
)
